--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,8 @@ header {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-evenly;
+  align-items: center;
+  padding: 10px;
 }
 
 .header .look-for {
@@ -38,6 +40,7 @@ nav ul {
   flex-wrap: wrap;
   justify-content: space-evenly;
   padding: 10px;
+  align-items: center;
 }
 
 nav ul li {
@@ -53,18 +56,9 @@ nav ul li a {
 
 .main-container {
   padding: 2vw;
-  display: grid;
-  grid-template-areas:
-    "title title title"
-    "slider slider slider"
-    "categories categories categories"
-    "top-offers top-offers top-offers"
-    "methods methods social"
-    "copyright copyright copyright";
 }
 
 .slider {
-  grid-area: slider;
   background: url(../images/banner.gif) center / cover no-repeat;
 }
 
@@ -87,13 +81,11 @@ nav ul li a {
 }
 
 .title {
-  grid-area: title;
   text-align: center;
   padding: 10px;
 }
 
 .categories {
-  grid-area: categories;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-evenly;
@@ -126,45 +118,33 @@ nav ul li a {
 }
 
 .top-offers {
-  grid-area: top-offers;
   padding: 10px;
-}
-
-/* NEWSLETTER */
-
-.newletter {
-  grid-area: newsletter;
 }
 
 /* FOOTER */
 
-footer {
-  grid-area: footer;
-}
-
 footer .footer__info {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: space-around;
 }
 
 footer .footer__info .methods {
-  grid-area: methods;
   padding: 2vw;
 }
 
 footer .footer__info .social {
-  grid-area: social;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   padding: 2vw;
 }
 
 footer .footer__info .social .social-item {
-  height: 30px;
-  width: 30px;
+  margin: 1rem;
 }
 
 footer .footer__copyright {
-  grid-area: copiright;
   text-align: center;
   padding: 5px;
 }
@@ -181,7 +161,7 @@ footer .footer__copyright {
   margin: 20px;
   text-align: center;
   width: 230px;
-  height: 400px;
+  height: 500px;
   border-radius: 8px;
   box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
   transition: all 0.25s;
@@ -198,7 +178,7 @@ footer .footer__copyright {
     height: 400px;
   }
 
-  .card__picture {
+  .offers .card .card__picture {
     width: 150px;
     height: auto;
   }
@@ -207,20 +187,33 @@ footer .footer__copyright {
 @media (min-width: 481px) and (max-width: 1024px) {
   .offers .card {
     width: 190px;
-    height: 250px;
+    height: 420px;
   }
 
-  .card__picture {
+  .offers .card .card__picture {
     width: 190px;
     height: auto;
   }
 }
 
 @media (min-width: 1024px) {
-  .card__picture {
+  .offers .card .card__picture {
     width: 230px;
     height: 400px;
   }
+}
+
+.offers .card .card__product-name {
+  font-weight: 400;
+}
+
+.offers .card .card__product-price {
+  font-weight: 600;
+}
+
+.offers .card .card__product-fees {
+  padding: 0 1rem;
+  font-weight: 300;
 }
 
 /* Men - Women */
@@ -236,6 +229,15 @@ footer .footer__copyright {
   padding: 10px;
 }
 
+.offers__container .card {
+  min-width: 210px;
+  height: 300px;
+}
+
+.offers__container .card .card__picture {
+  width: 210px;
+}
+
 @media (max-width: 480px) {
   .offers__container {
     display: none;
@@ -247,36 +249,26 @@ footer .footer__copyright {
   border-style: solid;
 }
 
-.card__picture {
-  min-width: 50px;
+.offers__container .card .card__picture {
   height: 300px;
 }
 
 @media (min-width: 481px) and (max-width: 1024px) {
-  .card__picture {
-    min-width: 30px;
+  .offers__container .card .card__picture {
     height: 150px;
   }
 }
 
 @media (min-width: 1024px) {
-  .card__picture {
-    min-width: 50px;
-    height: 300px;
+  .offers__container .card {
+    width: 400px;
+    height: 380px;
   }
-}
 
-.card .card__product-name {
-  font-weight: 400;
-}
-
-.card__product-price {
-  font-weight: 600;
-}
-
-.card__product-fees {
-  padding: 0 1rem;
-  font-weight: 300;
+  .offers__container .card .card__picture {
+    width: 210px;
+    height: auto;
+  }
 }
 
 .brands {
@@ -303,7 +295,6 @@ footer .footer__copyright {
   border-color: rgba(0, 0, 0, 0.116);
   border-style: solid;
   background: rgba(0, 0, 0, 0.089);
-  width: 1300px;
   height: 150px;
 }
 
@@ -311,8 +302,8 @@ footer .footer__copyright {
 
 .contact {
   display: flex;
-}
-
-.contact__form {
-  margin-left: 200px;
+  align-items: center;
+  justify-content: center;
+  margin-top: 5rem;
+  margin-bottom: 5rem;
 }
