--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@
 
 body {
   font-family: "Roboto", sans-serif;
-  background-color: #F3EED9;
+  background-color: #f3eed9;
 }
 
 /* HEADER */
@@ -54,7 +54,7 @@ nav ul li a {
 }
 
 nav ul li a:hover {
-  color: #64B1F3;
+  color: #64b1f3;
   font-weight: bold;
 }
 
@@ -133,7 +133,7 @@ footer .footer__info {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
-  background-color: #FFA69B;
+  background-color: #ffa69b;
 }
 
 footer .footer__info .methods {
@@ -154,6 +154,8 @@ footer .footer__info .social .social-item {
 footer .footer__copyright {
   text-align: center;
   padding: 5px;
+  background-color: #a91f29;
+  color: white;
 }
 
 /* Offers */
@@ -331,7 +333,7 @@ footer .footer__copyright {
   text-align: center;
   font-size: 18px;
   background: #fff;
-/*   position: relative; */
+  /*   position: relative; */
   border-radius: 15px;
   text-align: start;
   /* box-shadow: 0px 4px 4px rgba(196, 196, 196, 0.25); */
