--- a/css/style.css
+++ b/css/style.css
@@ -356,3 +356,15 @@ footer .footer__copyright {
   border-top-left-radius: 15px;
   border-top-right-radius: 15px;
 }
+
+/* Carousel */
+
+.carousel.carousel-fade .item {
+  opacity: 0;
+  filter: alpha(opacity=0); /* ie fix */
+}
+
+.carousel.carousel-fade .active.item {
+  opacity: 1;
+  filter: alpha(opacity=100); /* ie fix */
+}
