--- a/css/style.css
+++ b/css/style.css
@@ -368,3 +368,16 @@ footer .footer__copyright {
   opacity: 1;
   filter: alpha(opacity=100); /* ie fix */
 }
+
+.clipped {
+  clip: rect(0 0 0 0);
+  border: 0;
+  -webkit-clip-path: inset(50%);
+  clip-path: inset(50%);
+  display: block;
+  margin: 0 -1px -1px 0;
+  overflow: hidden;
+  padding: 0;
+  position: absolute;
+  z-index: -1;
+}
