--- a/css/style.css
+++ b/css/style.css
@@ -128,6 +128,32 @@ nav ul li a:hover {
   padding: 10px;
 }
 
+
+.trending-brands{
+  text-align: center;
+}
+
+.trending-brands__logos{
+display:flex;
+}
+
+.trending-brands ul{
+  width: 100%; 
+  flex-wrap: wrap; 
+  list-style: none; 
+  display: flex; 
+justify-content: space-evenly;
+}
+
+.trending-brands ul li img{
+  padding: 5px;
+  width: 150px;
+  height: 150px;
+  margin: 10px;
+}
+
+
+
 /* FOOTER */
 
 footer .footer__info {
@@ -161,61 +187,28 @@ footer .footer__copyright {
 
 /* Offers */
 
-.offers {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-wrap: wrap;
-}
-
-.offers .card {
-  margin: 20px;
+.custom-card .card__body{
+  padding: 10px;
   text-align: center;
-  width: 230px;
-  height: 500px;
-  border-radius: 8px;
-  box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
-  transition: all 0.25s;
-  background: #fff;
 }
 
-.offers .card:hover {
+.custom-card:hover {
   transform: translatY(-15px);
   box-shadow: 0 12px 16px rgba(0, 0, 0, 0.2);
 }
 
-@media (max-width: 480px) {
-  .offers .card {
-    width: 150px;
-    height: 400px;
-  }
-
-  .offers .card .card__picture {
-    width: 150px;
-    height: auto;
-    object-fit: cover;
-  }
+.card .card__picture img{
+  width:100%;
+  max-height: 300px; 
+  object-fit:cover;
 }
 
-@media (min-width: 481px) and (max-width: 1024px) {
-  .offers .card {
-    width: 190px;
-    height: 420px;
-  }
 
-  .offers .card .card__picture {
-    width: 190px;
-    height: auto;
-    object-fit: cover;
-  }
-}
 
-@media (min-width: 1024px) {
-  .offers .card .card__picture {
-    width: 230px;
-    height: 400px;
-    object-fit: cover;
-  }
+/*
+.offers .card .card__product{
+  padding: 1rem;
+  background: linear-gradient(to bottom left, #EF8D9C 40%, #FFC39E 100%);
 }
 
 .offers .card .card__product-name {
@@ -229,7 +222,7 @@ footer .footer__copyright {
 .offers .card .card__product-fees {
   padding: 0 1rem;
   font-weight: 300;
-}
+} */
 
 /* Men - Women */
 
@@ -309,8 +302,18 @@ footer .footer__copyright {
   margin-top: 10px;
   border-color: rgba(0, 0, 0, 0.116);
   border-style: solid;
-  background: rgba(0, 0, 0, 0.089);
-  height: 150px;
+  background-size: cover;
+  background-position: center; 
+  background-repeat: no-repeat;
+  height: 300px;
+}
+
+.announcements__item-first{
+  background-image: url('../images/store-first.jpg');
+}
+
+.announcements__item-second{
+  background-image: url('../images/store-second.jpg');
 }
 
 /* Contact */
@@ -335,22 +338,14 @@ footer .footer__copyright {
   text-align: center;
   font-size: 18px;
   background: #fff;
-  /*   position: relative; */
   border-radius: 15px;
   text-align: start;
-  /* box-shadow: 0px 4px 4px rgba(196, 196, 196, 0.25); */
   box-shadow: 0 5px 5px rgba(0, 0, 0, 0.2);
   border: 1px solid rgba(0, 0, 0, 0.116);
 }
 
-.swiper-slide:hover {
-  transform: translatY(-15px);
-  box-shadow: 0 12px 16px rgba(0, 0, 0, 0.2);
-}
-
 .swiper-slide img {
   height: 320px;
-  /* display: block; */
   width: 100%;
   object-fit: cover;
   border-top-left-radius: 15px;
