--- a/css/style.css
+++ b/css/style.css
@@ -36,6 +36,10 @@ header {
 
 /* Navigation */
 
+nav{
+  border-bottom: 1px solid #000;
+}
+
 nav ul {
   display: flex;
   flex-wrap: wrap;
@@ -320,10 +324,21 @@ footer .footer__copyright {
 
 .contact {
   display: flex;
+  flex-wrap: wrap; 
   align-items: center;
-  justify-content: center;
+  justify-content:space-around;
   margin-top: 5rem;
   margin-bottom: 5rem;
+}
+
+.contact .contact__form{
+  margin: 2rem;
+  padding: 2rem;
+  border: 1px solid rgba(0, 0, 0, 0.068);
+}
+
+.contact .contact__form input{
+  width: 400px;
 }
 
 /* Swiper */
