--- a/css/style.css
+++ b/css/style.css
@@ -69,7 +69,7 @@ nav ul li a:hover {
   padding: 2vw;
 }
 
-.slider {
+/* .slider {
   background: url(../images/banner.gif) center / cover no-repeat;
 }
 
@@ -89,7 +89,7 @@ nav ul li a:hover {
   .slider {
     height: 70vh;
   }
-}
+} */
 
 .title {
   text-align: center;
@@ -150,13 +150,16 @@ justify-content: space-evenly;
 }
 
 .trending-brands ul li img{
-  padding: 5px;
+  /* padding: 5px; */
   width: 150px;
   height: 150px;
   margin: 10px;
 }
 
-
+.trending-brands ul li img:hover{
+  transform: translatY(-15px);
+  box-shadow: 0 5px 5px rgba(0, 0, 0, 0.2);
+}
 
 /* FOOTER */
 
@@ -182,6 +185,11 @@ footer .footer__info .social .social-item {
   margin: 1rem;
 }
 
+footer .footer__info .social .social-item i:hover {
+  transform: translatY(-35px);
+  /* box-shadow: 0 5px 5px rgba(0, 0, 0, 0.2); */
+}
+
 footer .footer__copyright {
   text-align: center;
   padding: 5px;
@@ -191,14 +199,14 @@ footer .footer__copyright {
 
 /* Offers */
 
-.custom-card .card__body{
-  padding: 10px;
-  text-align: center;
-}
-
 .custom-card:hover {
   transform: translatY(-15px);
   box-shadow: 0 12px 16px rgba(0, 0, 0, 0.2);
+}
+
+.custom-card .card__body{
+  padding: 10px;
+  text-align: center;
 }
 
 .card .card__picture img{
@@ -331,14 +339,38 @@ footer .footer__copyright {
   margin-bottom: 5rem;
 }
 
-.contact .contact__form{
+.contact{
   margin: 2rem;
-  padding: 2rem;
+  padding: 1rem;
   border: 1px solid rgba(0, 0, 0, 0.068);
 }
 
+@media (max-width: 990px){
+  .contact .contact__form{
+    margin-bottom: 20px;
+  }
+}
+
 .contact .contact__form input{
-  width: 400px;
+  width: 220px;
+}
+
+@media (min-width: 480px) {
+  .contact .contact__form input {
+    width: 400px;
+  }
+}
+
+.contact .contact__address iframe{
+  width: 250px;
+  height: 150px; 
+}
+
+@media (min-width: 480px){
+  .contact .contact__address iframe{
+    width: 400px;
+    height: 250px; 
+  }
 }
 
 /* Swiper */
@@ -378,6 +410,57 @@ footer .footer__copyright {
   opacity: 1;
   filter: alpha(opacity=100); /* ie fix */
 }
+
+.carousel-inner .carousel-item img{
+  display: none;
+}
+
+@media (max-width: 480px) {
+  .carousel{
+    display: none;
+  }
+}
+
+@media (min-width: 481px) and (max-width: 1024px) {
+  .carousel-inner .carousel-item img{
+    height: 60vh; 
+    object-fit: cover;
+  }
+}
+
+@media (min-width: 1024px) {
+  .carousel-inner .carousel-item img{
+    height: 90vh; 
+    object-fit: cover;
+  }
+}
+
+
+.bordered-title {
+  -webkit-text-stroke: 2px black;
+  color: transparent; 
+}
+
+.bordered-paragraph {
+  -webkit-text-stroke: 2px black;
+}
+
+/* @media (max-width: 480px) {
+  .slider {
+    height: 20vh;
+  }
+}
+
+@media (min-width: 481px) and (max-width: 1024px) {
+  .slider {
+    height: 40vh;
+  }
+}
+
+@media (min-width: 1024px) {
+  .slider {
+    height: 70vh;
+  } */
 
 .clipped {
   clip: rect(0 0 0 0);
