--- a/css/style.css
+++ b/css/style.css
@@ -36,7 +36,7 @@ header {
 
 /* Navigation */
 
-nav{
+nav {
   border-bottom: 1px solid #000;
 }
 
@@ -69,38 +69,21 @@ nav ul li a:hover {
   padding: 2vw;
 }
 
-/* .slider {
-  background: url(../images/banner.gif) center / cover no-repeat;
-}
-
-@media (max-width: 480px) {
-  .slider {
-    height: 20vh;
-  }
-}
-
-@media (min-width: 481px) and (max-width: 1024px) {
-  .slider {
-    height: 40vh;
-  }
-}
-
-@media (min-width: 1024px) {
-  .slider {
-    height: 70vh;
-  }
-} */
-
 .title {
   text-align: center;
   padding: 10px;
+}
+
+.paragraph{
+  text-align: center;
 }
 
 .categories {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-evenly;
-  padding: 20px;
+  margin-top: 50px;
+  margin-bottom: 50px;
 }
 
 .category {
@@ -132,31 +115,36 @@ nav ul li a:hover {
   padding: 10px;
 }
 
+/* TRENDING BRANDS */
+
+.trending-brands {
+  text-align: center;
+  margin-top: 50px;
+  margin-bottom: 50px;
+}
 
 .trending-brands{
+  /* width: 100%;
+  flex-wrap: wrap;
+  display: flex; */
+  /* justify-content: space-evenly; */
   text-align: center;
 }
 
-.trending-brands__logos{
-display:flex;
+.trending-brands__logos {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  margin-top: 30px;
 }
 
-.trending-brands ul{
-  width: 100%; 
-  flex-wrap: wrap; 
-  list-style: none; 
-  display: flex; 
-justify-content: space-evenly;
-}
-
-.trending-brands ul li img{
-  /* padding: 5px; */
+.trending-brands .trending-brands__logos img {
   width: 150px;
   height: 150px;
   margin: 10px;
 }
 
-.trending-brands ul li img:hover{
+.trending-brands img:hover {
   transform: translatY(-15px);
   box-shadow: 0 5px 5px rgba(0, 0, 0, 0.2);
 }
@@ -172,6 +160,7 @@ footer .footer__info {
 
 footer .footer__info .methods {
   padding: 2vw;
+  color: white;
 }
 
 footer .footer__info .social {
@@ -183,11 +172,16 @@ footer .footer__info .social {
 
 footer .footer__info .social .social-item {
   margin: 1rem;
+  font-size:30px;
+  /* color: whitesmoke; */
+  /* text-decoration: none; */
+  /* color: white;
+  -webkit-text-stroke: 1px black; */
 }
 
 footer .footer__info .social .social-item i:hover {
   transform: translatY(-35px);
-  /* box-shadow: 0 5px 5px rgba(0, 0, 0, 0.2); */
+  box-shadow: 0 5px 5px rgba(0, 0, 0, 0.2);
 }
 
 footer .footer__copyright {
@@ -204,37 +198,16 @@ footer .footer__copyright {
   box-shadow: 0 12px 16px rgba(0, 0, 0, 0.2);
 }
 
-.custom-card .card__body{
+.custom-card .card__body {
   padding: 10px;
   text-align: center;
 }
 
-.card .card__picture img{
-  width:100%;
-  max-height: 300px; 
-  object-fit:cover;
+.card .card__picture img {
+  width: 100%;
+  max-height: 300px;
+  object-fit: cover;
 }
-
-
-
-/*
-.offers .card .card__product{
-  padding: 1rem;
-  background: linear-gradient(to bottom left, #EF8D9C 40%, #FFC39E 100%);
-}
-
-.offers .card .card__product-name {
-  font-weight: 400;
-}
-
-.offers .card .card__product-price {
-  font-weight: 600;
-}
-
-.offers .card .card__product-fees {
-  padding: 0 1rem;
-  font-weight: 300;
-} */
 
 /* Men - Women */
 
@@ -315,43 +288,43 @@ footer .footer__copyright {
   border-color: rgba(0, 0, 0, 0.116);
   border-style: solid;
   background-size: cover;
-  background-position: center; 
+  background-position: center;
   background-repeat: no-repeat;
   height: 300px;
 }
 
-.announcements__item-first{
-  background-image: url('../images/store-first.jpg');
+.announcements__item-first {
+  background-image: url("../images/store-first.jpg");
 }
 
-.announcements__item-second{
-  background-image: url('../images/store-second.jpg');
+.announcements__item-second {
+  background-image: url("../images/store-second.jpg");
 }
 
 /* Contact */
 
 .contact {
   display: flex;
-  flex-wrap: wrap; 
+  flex-wrap: wrap;
   align-items: center;
-  justify-content:space-around;
+  justify-content: space-around;
   margin-top: 5rem;
   margin-bottom: 5rem;
 }
 
-.contact{
+.contact {
   margin: 2rem;
   padding: 1rem;
   border: 1px solid rgba(0, 0, 0, 0.068);
 }
 
-@media (max-width: 990px){
-  .contact .contact__form{
+@media (max-width: 990px) {
+  .contact .contact__form {
     margin-bottom: 20px;
   }
 }
 
-.contact .contact__form input{
+.contact .contact__form input {
   width: 220px;
 }
 
@@ -361,15 +334,15 @@ footer .footer__copyright {
   }
 }
 
-.contact .contact__address iframe{
+.contact .contact__address iframe {
   width: 250px;
-  height: 150px; 
+  height: 150px;
 }
 
-@media (min-width: 480px){
-  .contact .contact__address iframe{
+@media (min-width: 480px) {
+  .contact .contact__address iframe {
     width: 400px;
-    height: 250px; 
+    height: 250px;
   }
 }
 
@@ -411,56 +384,38 @@ footer .footer__copyright {
   filter: alpha(opacity=100); /* ie fix */
 }
 
-.carousel-inner .carousel-item img{
+.carousel-inner .carousel-item img {
   display: none;
 }
 
 @media (max-width: 480px) {
-  .carousel{
+  .carousel {
     display: none;
   }
 }
 
 @media (min-width: 481px) and (max-width: 1024px) {
-  .carousel-inner .carousel-item img{
-    height: 60vh; 
+  .carousel-inner .carousel-item img {
+    height: 60vh;
     object-fit: cover;
   }
 }
 
 @media (min-width: 1024px) {
-  .carousel-inner .carousel-item img{
-    height: 90vh; 
+  .carousel-inner .carousel-item img {
+    height: 90vh;
     object-fit: cover;
   }
 }
 
-
 .bordered-title {
   -webkit-text-stroke: 2px black;
-  color: transparent; 
+  color: transparent;
 }
 
 .bordered-paragraph {
   -webkit-text-stroke: 2px black;
 }
-
-/* @media (max-width: 480px) {
-  .slider {
-    height: 20vh;
-  }
-}
-
-@media (min-width: 481px) and (max-width: 1024px) {
-  .slider {
-    height: 40vh;
-  }
-}
-
-@media (min-width: 1024px) {
-  .slider {
-    height: 70vh;
-  } */
 
 .clipped {
   clip: rect(0 0 0 0);
@@ -473,4 +428,54 @@ footer .footer__copyright {
   padding: 0;
   position: absolute;
   z-index: -1;
+}
+
+.custom-btn {
+  width: 130px;
+  height: 40px;
+  border: 2px solid #000;
+  font-family: "Lato", sans-serif;
+  font-weight: 500;
+  background: transparent;
+  cursor: pointer;
+  transition: all 0.3s ease;
+  position: relative;
+  display: inline-block;
+
+  overflow: hidden;
+}
+
+.custom-btn:hover {
+  background: #000;
+  color: #fff;
+}
+
+.custom-btn:before {
+  position: absolute;
+  content: "";
+  display: inline-block;
+  top: -180px;
+  left: 0;
+  width: 30px;
+  height: 100%;
+  background-color: #fff;
+  animation: shiny-btn1 3s ease-in-out infinite;
+}
+
+
+.legend{
+  background-color: #efa69b; 
+  padding: 30px; 
+  margin-top: 20px; 
+  margin-bottom: 20px;
+}
+
+.cart-btn {
+  color: black;
+  width: 40px;
+  height: 40px;
+}
+
+.cart-btn .bi:hover {
+  color: #fff;
 }
