--- a/css/style.css
+++ b/css/style.css
@@ -26,6 +26,7 @@ header {
 .header .look-for {
   height: 30px;
   width: 500px;
+  padding: 5px;
   border-radius: 20px;
 }
 
@@ -74,7 +75,7 @@ nav ul li a:hover {
   padding: 10px;
 }
 
-.paragraph{
+.paragraph {
   text-align: center;
 }
 
@@ -86,8 +87,17 @@ nav ul li a:hover {
   margin-bottom: 50px;
 }
 
+.categories img:hover {
+  transform: translatY(-15px);
+  box-shadow: 0 10px 10px rgba(0, 0, 0, 0.2);
+}
+
 .category {
   border-radius: 50%;
+}
+
+.category img {
+  object-fit: cover;
 }
 
 @media (max-width: 480px) {
@@ -123,11 +133,7 @@ nav ul li a:hover {
   margin-bottom: 50px;
 }
 
-.trending-brands{
-  /* width: 100%;
-  flex-wrap: wrap;
-  display: flex; */
-  /* justify-content: space-evenly; */
+.trending-brands {
   text-align: center;
 }
 
@@ -163,6 +169,16 @@ footer .footer__info .methods {
   color: white;
 }
 
+footer .footer__info .methods .methods-visa {
+  width: 80px;
+}
+footer .footer__info .methods .methods-mercadopago {
+  width: 120px;
+}
+footer .footer__info .methods .methods-correo {
+  width: 110px;
+}
+
 footer .footer__info .social {
   display: flex;
   align-items: center;
@@ -172,7 +188,7 @@ footer .footer__info .social {
 
 footer .footer__info .social .social-item {
   margin: 1rem;
-  font-size:30px;
+  font-size: 30px;
   /* color: whitesmoke; */
   /* text-decoration: none; */
   /* color: white;
@@ -279,26 +295,7 @@ footer .footer__copyright {
 }
 
 .announcements {
-  margin-top: 20px;
-  border-color: rgba(0, 0, 0, 0.034);
-}
-
-.announcements__item {
-  margin-top: 10px;
-  border-color: rgba(0, 0, 0, 0.116);
-  border-style: solid;
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-  height: 300px;
-}
-
-.announcements__item-first {
-  background-image: url("../images/store-first.jpg");
-}
-
-.announcements__item-second {
-  background-image: url("../images/store-second.jpg");
+  margin: 30px;
 }
 
 /* Contact */
@@ -462,20 +459,34 @@ footer .footer__copyright {
   animation: shiny-btn1 3s ease-in-out infinite;
 }
 
-
-.legend{
-  background-color: #efa69b; 
-  padding: 30px; 
-  margin-top: 20px; 
+.legend {
+  background-color: #efa69b;
+  padding: 30px;
+  margin-top: 20px;
   margin-bottom: 20px;
 }
 
 .cart-btn {
   color: black;
-  width: 40px;
-  height: 40px;
+  font-size: 30px;
+  padding: 0 5px 0 5px;
 }
 
 .cart-btn .bi:hover {
   color: #fff;
+}
+
+@media (max-width: 999px) {
+  .announcements img {
+    display: none;
+  }
+}
+
+@media (min-width: 1000px) {
+  .announcements img {
+    width: 100%;
+    height: 250px;
+    max-height: 300px;
+    object-fit: contain;
+  }
 }
