--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,7 @@ header {
 .header {
   display: flex;
   flex-wrap: wrap;
-  justify-content:space-between;
+  justify-content: space-between;
   align-items: center;
   padding: 10px;
 }
@@ -35,20 +35,13 @@ header {
   color: black;
 }
 
-/* @media(max-width: 480px){
-  .logo {
-    display: none;
-
-  }
-} */
-
-@media(max-width: 850px){
+@media (max-width: 850px) {
   .logo {
     display: none;
   }
 }
 
-@media(max-width: 700px){
+@media (max-width: 700px) {
   .header {
     justify-content: space-evenly;
   }
@@ -168,7 +161,7 @@ nav ul li a:hover {
   margin: 7px;
 }
 
-@media(min-width: 480px){
+@media (min-width: 480px) {
   .trending-brands .trending-brands__logos img {
     width: 150px;
     height: 150px;
@@ -215,10 +208,6 @@ footer .footer__info .social {
 footer .footer__info .social .social-item {
   margin: 1rem;
   font-size: 30px;
-  /* color: whitesmoke; */
-  /* text-decoration: none; */
-  /* color: white;
-  -webkit-text-stroke: 1px black; */
 }
 
 footer .footer__info .social .social-item i:hover {
@@ -234,6 +223,10 @@ footer .footer__copyright {
 }
 
 /* Offers */
+
+.custom-card {
+  max-height: 480px;
+}
 
 .custom-card:hover {
   transform: translatY(-15px);
@@ -253,65 +246,16 @@ footer .footer__copyright {
 
 /* Men - Women */
 
-.offers__container {
-  display: flex;
-  justify-content: flex-start;
-  overflow-x: scroll;
-  height: 100%;
-  width: 1200px;
-  flex-wrap: nowrap;
-  gap: 10px;
-  padding: 10px;
-}
-
-.offers__container .card {
-  min-width: 210px;
-  height: 300px;
-}
-
-.offers__container .card .card__picture {
-  width: 210px;
-}
-
-@media (max-width: 480px) {
-  .offers__container {
-    display: none;
-  }
-}
-
-.offers__container .card {
-  border-color: black;
-  border-style: solid;
-}
-
-.offers__container .card .card__picture {
-  height: 300px;
-}
-
-@media (min-width: 481px) and (max-width: 1024px) {
-  .offers__container .card .card__picture {
-    height: 150px;
-  }
-}
-
-@media (min-width: 1024px) {
-  .offers__container .card {
-    width: 400px;
-    height: 380px;
-  }
-
-  .offers__container .card .card__picture {
-    width: 210px;
-    height: auto;
-  }
+.custom-card h2,
+h3 {
+  font-size: 1.25rem;
 }
 
 .brands {
   display: flex;
   flex-wrap: wrap;
-  justify-content:space-around;
+  justify-content: space-around;
   margin-top: 20px;
-  /* border-color: rgb(242, 242, 242); */
 }
 
 .brands__item {
@@ -327,11 +271,12 @@ footer .footer__copyright {
   justify-content: center;
 }
 
-.brands__item img, p{
+.brands__item img,
+p {
   margin: 5px;
 }
 
-.brands__item:hover{
+.brands__item:hover {
   transform: translatY(-15px);
   box-shadow: 0 10px 10px rgba(0, 0, 0, 0.2);
 }
@@ -342,7 +287,7 @@ footer .footer__copyright {
 
 /* Contact */
 
-.contact-title{
+.contact-title {
   text-align: center;
   padding: 10px;
   margin-top: 30px;
@@ -360,7 +305,7 @@ footer .footer__copyright {
   border: 1px solid rgba(0, 0, 0, 0.068);
 }
 
-.contact .contact__form .contact__form-submit button:hover{
+.contact .contact__form .contact__form-submit button:hover {
   -webkit-text-stroke: 2px black;
   color: transparent;
 }
