--- a/scss/partials/_contact.scss
+++ b/scss/partials/_contact.scss
@@ -1,5 +1,47 @@
-.contact{
-  @include flexbox(center, center);
+.contact-title {
+  text-align: center;
+  padding: 10px;
+  margin-top: 30px;
+}
+
+.contact {
+  @include flexbox(space-around, center, wrap);
   margin-top: 5rem;
   margin-bottom: 5rem;
+  margin: 2rem;
+  padding: 1rem;
+  border: 1px solid rgba(0, 0, 0, 0.068);
+
+  .contact__form {
+    @media (max-width: 990px) {
+      margin-bottom: 20px;
+    }
+
+    input {
+      width: 220px;
+
+      @media (min-width: 480px) {
+        width: 400px;
+      }
+    }
+
+    .contact__form-submit {
+      button:hover {
+        -webkit-text-stroke: 2px black;
+        color: transparent;
+      }
+    }
+  }
+
+  .contact__address {
+    iframe {
+      width: 250px;
+      height: 150px;
+
+      @media (min-width: 480px) {
+        width: 400px;
+        height: 250px;
+      }
+    }
+  }
 }
