--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,6 +1,15 @@
 @import 'base/variables';
 @import 'base/mixin';
-@import 'partials/header';
+@import 'partials/announcements';
+@import 'partials/brands';
+@import 'partials/carousel';
+@import 'partials/cart-button';
+@import 'partials/categories';
+@import 'partials/contact';
+@import 'partials/custom-button';
+@import 'partials/custom-card';
 @import 'partials/footer';
+@import 'partials/header';
+@import 'partials/others';
 @import 'partials/swiper';
-@import 'partials/offers';
+@import 'partials/trending-brands';
