--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,309 @@
+.announcements {
+  margin: 30px;
+}
+@media (max-width: 999px) {
+  .announcements {
+    display: none;
+  }
+}
+@media (min-width: 1000px) {
+  .announcements img {
+    width: 100%;
+    height: 250px;
+    max-height: 300px;
+    object-fit: contain;
+  }
+}
+
+.brands {
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  margin-top: 20px;
+}
+.brands .brands__item {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: nowrap;
+  border: 1px solid #000;
+  border-style: solid;
+  background-color: #ffa69b;
+  color: #333333;
+  width: 250px;
+  height: 200px;
+  margin: 10px;
+}
+.brands .brands__item img,
+.brands .brands__item p {
+  margin: 5px;
+}
+.brands .brands__item:hover {
+  transform: translatY(-15px);
+  box-shadow: 0 10px 10px rgba(0, 0, 0, 0.2);
+}
+
+@media (max-width: 480px) {
+  .carousel {
+    display: none;
+  }
+}
+.carousel .carousel-inner .carousel-item img {
+  display: none;
+}
+@media (min-width: 481px) and (max-width: 1024px) {
+  .carousel .carousel-inner .carousel-item img {
+    height: 60vh;
+    object-fit: cover;
+  }
+}
+@media (min-width: 1024px) {
+  .carousel .carousel-inner .carousel-item img {
+    height: 90vh;
+    object-fit: cover;
+  }
+}
+.carousel .carousel-inner .carousel-item .carousel-caption .bordered-title {
+  -webkit-text-stroke: 2px black;
+  color: transparent;
+}
+.carousel .carousel-inner .carousel-item .carousel-caption .bordered-paragraph {
+  -webkit-text-stroke: 2px black;
+}
+
+.cart-btn {
+  color: black;
+  font-size: 25px;
+  padding: 0 5px 0 5px;
+  border-radius: 0%;
+}
+.cart-btn .bi:hover {
+  color: #fff;
+  border-color: #000;
+}
+
+.categories {
+  display: flex;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+  margin-top: 50px;
+  margin-bottom: 50px;
+}
+@media (max-width: 480px) {
+  .categories {
+    display: none;
+  }
+}
+.categories .category {
+  border-radius: 50%;
+}
+.categories .category img {
+  object-fit: cover;
+}
+.categories .category:hover {
+  transform: translatY(-15px);
+  box-shadow: 0 10px 10px rgba(0, 0, 0, 0.2);
+}
+@media (min-width: 481px) and (max-width: 1024px) {
+  .categories .category {
+    width: 70px;
+    height: 70px;
+  }
+}
+@media (min-width: 1024px) {
+  .categories .category {
+    width: 100px;
+    height: 100px;
+  }
+}
+
+.contact-title {
+  text-align: center;
+  padding: 10px;
+  margin-top: 30px;
+}
+
+.contact {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  flex-wrap: wrap;
+  margin-top: 5rem;
+  margin-bottom: 5rem;
+  margin: 2rem;
+  padding: 1rem;
+  border: 1px solid rgba(0, 0, 0, 0.068);
+}
+@media (max-width: 990px) {
+  .contact .contact__form {
+    margin-bottom: 20px;
+  }
+}
+.contact .contact__form input {
+  width: 220px;
+}
+@media (min-width: 480px) {
+  .contact .contact__form input {
+    width: 400px;
+  }
+}
+.contact .contact__form .contact__form-submit button:hover {
+  -webkit-text-stroke: 2px black;
+  color: transparent;
+}
+.contact .contact__address iframe {
+  width: 250px;
+  height: 150px;
+}
+@media (min-width: 480px) {
+  .contact .contact__address iframe {
+    width: 400px;
+    height: 250px;
+  }
+}
+
+.custom-btn {
+  width: 130px;
+  height: 40px;
+  border: 2px solid #000;
+  font-family: "Lato", sans-serif;
+  font-weight: 500;
+  background: transparent;
+  transition: all 0.3s ease;
+  position: relative;
+  display: inline-block;
+  overflow: hidden;
+}
+.custom-btn:hover {
+  background: #000;
+  color: #fff;
+}
+.custom-btn:before {
+  position: absolute;
+  display: inline-block;
+  top: -180px;
+  left: 0;
+  width: 30px;
+  height: 100%;
+  background-color: #fff;
+  animation: shiny-btn1 3s ease-in-out infinite;
+}
+
+.custom-card {
+  max-height: 480px;
+}
+.custom-card:hover {
+  transform: translatY(-15px);
+  box-shadow: 0 12px 16px rgba(0, 0, 0, 0.2);
+}
+.custom-card .card__body {
+  padding: 10px;
+  text-align: center;
+}
+.custom-card .card__picture img {
+  width: 100%;
+  max-height: 300px;
+  object-fit: cover;
+}
+.custom-card h2,
+.custom-card h3 {
+  font-size: 1.25rem;
+}
+
+footer .footer__info {
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  background-color: #ffa69b;
+}
+footer .footer__info .methods {
+  padding: 2vw;
+  color: #fff;
+}
+footer .footer__info .methods .methods-visa {
+  width: 80px;
+}
+footer .footer__info .methods .methods-mercadopago {
+  width: 120px;
+}
+footer .footer__info .methods .methods-correo {
+  width: 110px;
+}
+footer .footer__info .social {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: nowrap;
+  padding: 2vw;
+}
+footer .footer__info .social .social-item {
+  margin: 1rem;
+  font-size: 30px;
+}
+footer .footer__info .social .social-item i:hover {
+  transform: translatY(-35px);
+  box-shadow: 0 5px 5px rgba(0, 0, 0, 0.2);
+}
+footer .footer__copyright {
+  text-align: center;
+  padding: 5px;
+  background-color: #a91f29;
+  color: white;
+}
+
+header {
+  background-color: #a91f29;
+}
+header .header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
+  padding: 10px;
+}
+@media (max-width: 800px) {
+  header .header {
+    justify-content: space-evenly;
+  }
+}
+header .header .logo {
+  text-decoration: none;
+  color: black;
+}
+@media (max-width: 900px) {
+  header .header .logo {
+    display: none;
+  }
+}
+header .header .look-for {
+  height: 30px;
+  width: 500px;
+  padding: 18px;
+  margin: 5px;
+}
+header nav {
+  border-bottom: 1px solid #000;
+}
+header nav ul {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  flex-wrap: wrap;
+  padding: 10px;
+  margin-bottom: 0;
+}
+header nav ul li {
+  list-style: none;
+}
+header nav ul li a {
+  text-decoration: none;
+  color: whitesmoke;
+}
+header nav ul li a:hover {
+  color: #64b1f3;
+  font-weight: bold;
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -9,79 +315,12 @@ body {
   background-color: #f3eed9;
 }
 
-/* HEADER */
-
-header {
-  background-color: #a91f29;
-}
-
-.header {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  align-items: center;
-  padding: 10px;
-}
-
-.header .look-for {
-  height: 30px;
-  width: 500px;
-  padding: 18px;
-  margin: 5px;
-}
-
-.logo {
-  text-decoration: none;
-  color: black;
-}
-
-@media (max-width: 850px) {
-  .logo {
-    display: none;
-  }
-}
-
-@media (max-width: 700px) {
-  .header {
-    justify-content: space-evenly;
-  }
-}
-
-/* Navigation */
-
-nav {
-  border-bottom: 1px solid #000;
-}
-
-nav ul {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-evenly;
-  padding: 10px;
-  align-items: center;
-  margin-bottom: 0;
-}
-
-nav ul li {
-  list-style: none;
-}
-
-nav ul li a {
-  text-decoration: none;
-  color: whitesmoke;
-}
-
-nav ul li a:hover {
-  color: #64b1f3;
-  font-weight: bold;
-}
-
 /* MAIN */
-
 .main-container {
   padding: 2vw;
 }
 
+/* FORMAT */
 .title {
   text-align: center;
   padding: 10px;
@@ -91,324 +330,12 @@ nav ul li a:hover {
   text-align: center;
 }
 
-.categories {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-evenly;
-  margin-top: 50px;
-  margin-bottom: 50px;
-}
-
-.categories img:hover {
-  transform: translatY(-15px);
-  box-shadow: 0 10px 10px rgba(0, 0, 0, 0.2);
-}
-
-.category {
-  border-radius: 50%;
-}
-
-.category img {
-  object-fit: cover;
-}
-
-@media (max-width: 480px) {
-  .categories {
-    display: none;
-  }
-}
-
-@media (min-width: 481px) and (max-width: 1024px) {
-  .category {
-    width: 70px;
-    height: 70px;
-  }
-}
-
-@media (min-width: 1024px) {
-  .category {
-    width: 100px;
-    height: 100px;
-  }
-}
-
+/* TOP OFFERS */
 .top-offers {
   padding: 10px;
 }
 
-/* TRENDING BRANDS */
-
-.trending-brands {
-  text-align: center;
-  margin-top: 50px;
-  margin-bottom: 50px;
-}
-
-.trending-brands {
-  text-align: center;
-}
-
-.trending-brands__logos {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  margin-top: 30px;
-}
-
-.trending-brands .trending-brands__logos img {
-  width: 100px;
-  height: 100px;
-  margin: 7px;
-}
-
-@media (min-width: 480px) {
-  .trending-brands .trending-brands__logos img {
-    width: 150px;
-    height: 150px;
-    margin: 10px;
-  }
-}
-
-.trending-brands img:hover {
-  transform: translatY(-15px);
-  box-shadow: 0 5px 5px rgba(0, 0, 0, 0.2);
-}
-
-/* FOOTER */
-
-footer .footer__info {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-around;
-  background-color: #ffa69b;
-}
-
-footer .footer__info .methods {
-  padding: 2vw;
-  color: white;
-}
-
-footer .footer__info .methods .methods-visa {
-  width: 80px;
-}
-footer .footer__info .methods .methods-mercadopago {
-  width: 120px;
-}
-footer .footer__info .methods .methods-correo {
-  width: 110px;
-}
-
-footer .footer__info .social {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  padding: 2vw;
-}
-
-footer .footer__info .social .social-item {
-  margin: 1rem;
-  font-size: 30px;
-}
-
-footer .footer__info .social .social-item i:hover {
-  transform: translatY(-35px);
-  box-shadow: 0 5px 5px rgba(0, 0, 0, 0.2);
-}
-
-footer .footer__copyright {
-  text-align: center;
-  padding: 5px;
-  background-color: #a91f29;
-  color: white;
-}
-
-/* Offers */
-
-.custom-card {
-  max-height: 480px;
-}
-
-.custom-card:hover {
-  transform: translatY(-15px);
-  box-shadow: 0 12px 16px rgba(0, 0, 0, 0.2);
-}
-
-.custom-card .card__body {
-  padding: 10px;
-  text-align: center;
-}
-
-.card .card__picture img {
-  width: 100%;
-  max-height: 300px;
-  object-fit: cover;
-}
-
-/* Men - Women */
-
-.custom-card h2,
-h3 {
-  font-size: 1.25rem;
-}
-
-.brands {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-around;
-  margin-top: 20px;
-}
-
-.brands__item {
-  display: flex;
-  border: 1px solid #000;
-  border-style: solid;
-  background-color: #ffa69b;
-  color: #333333;
-  width: 250px;
-  height: 200px;
-  margin: 10px;
-  align-items: center;
-  justify-content: center;
-}
-
-.brands__item img,
-p {
-  margin: 5px;
-}
-
-.brands__item:hover {
-  transform: translatY(-15px);
-  box-shadow: 0 10px 10px rgba(0, 0, 0, 0.2);
-}
-
-.announcements {
-  margin: 30px;
-}
-
-/* Contact */
-
-.contact-title {
-  text-align: center;
-  padding: 10px;
-  margin-top: 30px;
-}
-
-.contact {
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-  justify-content: space-around;
-  margin-top: 5rem;
-  margin-bottom: 5rem;
-  margin: 2rem;
-  padding: 1rem;
-  border: 1px solid rgba(0, 0, 0, 0.068);
-}
-
-.contact .contact__form .contact__form-submit button:hover {
-  -webkit-text-stroke: 2px black;
-  color: transparent;
-}
-
-@media (max-width: 990px) {
-  .contact .contact__form {
-    margin-bottom: 20px;
-  }
-}
-
-.contact .contact__form input {
-  width: 220px;
-}
-
-@media (min-width: 480px) {
-  .contact .contact__form input {
-    width: 400px;
-  }
-}
-
-.contact .contact__address iframe {
-  width: 250px;
-  height: 150px;
-}
-
-@media (min-width: 480px) {
-  .contact .contact__address iframe {
-    width: 400px;
-    height: 250px;
-  }
-}
-
-/* Swiper */
-
-.swiper {
-  width: 100%;
-  height: 100%;
-  padding: 20px;
-}
-
-.swiper-slide {
-  text-align: center;
-  font-size: 18px;
-  background: #fff;
-  border-radius: 15px;
-  text-align: start;
-  box-shadow: 0 5px 5px rgba(0, 0, 0, 0.2);
-  border: 1px solid rgba(0, 0, 0, 0.116);
-}
-
-.swiper-slide img {
-  height: 320px;
-  width: 100%;
-  object-fit: cover;
-  border-top-left-radius: 15px;
-  border-top-right-radius: 15px;
-}
-
-/* Carousel */
-
-.carousel.carousel-fade .item {
-  opacity: 0;
-  filter: alpha(opacity=0); /* ie fix */
-}
-
-.carousel.carousel-fade .active.item {
-  opacity: 1;
-  filter: alpha(opacity=100); /* ie fix */
-}
-
-.carousel-inner .carousel-item img {
-  display: none;
-}
-
-@media (max-width: 480px) {
-  .carousel {
-    display: none;
-  }
-}
-
-@media (min-width: 481px) and (max-width: 1024px) {
-  .carousel-inner .carousel-item img {
-    height: 60vh;
-    object-fit: cover;
-  }
-}
-
-@media (min-width: 1024px) {
-  .carousel-inner .carousel-item img {
-    height: 90vh;
-    object-fit: cover;
-  }
-}
-
-.bordered-title {
-  -webkit-text-stroke: 2px black;
-  color: transparent;
-}
-
-.bordered-paragraph {
-  -webkit-text-stroke: 2px black;
-}
-
+/* CLIPPED - H1 */
 .clipped {
   clip: rect(0 0 0 0);
   border: 0;
@@ -422,38 +349,7 @@ p {
   z-index: -1;
 }
 
-.custom-btn {
-  width: 130px;
-  height: 40px;
-  border: 2px solid #000;
-  font-family: "Lato", sans-serif;
-  font-weight: 500;
-  background: transparent;
-  cursor: pointer;
-  transition: all 0.3s ease;
-  position: relative;
-  display: inline-block;
-
-  overflow: hidden;
-}
-
-.custom-btn:hover {
-  background: #000;
-  color: #fff;
-}
-
-.custom-btn:before {
-  position: absolute;
-  content: "";
-  display: inline-block;
-  top: -180px;
-  left: 0;
-  width: 30px;
-  height: 100%;
-  background-color: #fff;
-  animation: shiny-btn1 3s ease-in-out infinite;
-}
-
+/* LEGEND */
 .legend {
   background-color: #efa69b;
   padding: 30px;
@@ -461,29 +357,54 @@ p {
   margin-bottom: 20px;
 }
 
-.cart-btn {
-  color: black;
-  font-size: 25px;
-  padding: 0 5px 0 5px;
-  border-radius: 0%;
+.swiper {
+  width: 100%;
+  height: 100%;
+  padding: 20px;
+}
+.swiper .swiper-slide {
+  text-align: center;
+  font-size: 18px;
+  background: #fff;
+  border-radius: 15px;
+  text-align: start;
+  box-shadow: 0 5px 5px rgba(0, 0, 0, 0.2);
+  border: 1px solid rgba(0, 0, 0, 0.116);
+}
+.swiper .swiper-slide img {
+  height: 320px;
+  width: 100%;
+  object-fit: cover;
+  border-top-left-radius: 15px;
+  border-top-right-radius: 15px;
 }
 
-.cart-btn .bi:hover {
-  color: #fff;
-  border-color: #000;
+.trending-brands {
+  text-align: center;
+  margin-top: 50px;
+  margin-bottom: 50px;
 }
-
-@media (max-width: 999px) {
-  .announcements img {
-    display: none;
+.trending-brands .trending-brands__logos {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  margin-top: 30px;
+}
+.trending-brands .trending-brands__logos img {
+  width: 100px;
+  height: 100px;
+  margin: 7px;
+}
+.trending-brands .trending-brands__logos img:hover {
+  transform: translatY(-15px);
+  box-shadow: 0 5px 5px rgba(0, 0, 0, 0.2);
+}
+@media (min-width: 480px) {
+  .trending-brands .trending-brands__logos img {
+    width: 150px;
+    height: 150px;
+    margin: 10px;
   }
 }
 
-@media (min-width: 1000px) {
-  .announcements img {
-    width: 100%;
-    height: 250px;
-    max-height: 300px;
-    object-fit: contain;
-  }
-}
+/*# sourceMappingURL=style.css.map */
