--- a/scss/base/_mixin.scss
+++ b/scss/base/_mixin.scss
@@ -4,3 +4,8 @@
   align-items: $align-items;
   flex-wrap: $flex-wrap;
 }
+@mixin flexbox-no-align ($justify-content, $flex-wrap: nowrap){
+  display: flex;
+  justify-content: $justify-content;
+  flex-wrap: $flex-wrap;
+}
